implementação style.css

--- a/index.html
+++ b/index.html
@@ -5,41 +5,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu perfil</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-        <span>
+    <ul id="menu">
+        <li>
             <a href="index.html">Home</a>
+        </li>
+        <li>
             <a href="contato.html">Contato</a>
-        </span>
-        <hr>
-        
-    <h1>Sobre a Victória</h1>
-    <p>
-        <td align='justify'>Sempre fui uma menina muito curiosa e apaixonada pela área de exatas, no ano de 2017 tive a
-            oportunidade de prestar o vestibulinho da Etec, consegui passar e ali comecei minha trajetória no mundo da
-            tecnologia.
-            Em 2019 me formei como técnica em informática e também fiz um curso voltado para meninas no mundo Tech,
-            chamado Minas Programam, onde tive mais certeza de que queria isso pra vida e carreira.
-        </td>
-    </p>
-    <p>
-        <td align='justify'>Atualmente, estou estudando para me tornar uma desenvolvedora Java Full Stack pelo curso da
-            Generation Brasil e lá estou aprendendo desde habilidades técnicas como: linguagem Java, JavaScrpit,
-            SpringBoot, MySql, Metologias ágeis, além de soft skills como trabalho em equipe, proatividade, etc.
-            Acredito muito no poder da tecnologia para transformar de forma positiva a nossas vidas e também na inserção
-            de mais meninas nessa área.
-        </td>
-    </p>
+        </li>
+    </ul>
 
-    <img src="assets/img/vic.jpg" alt="Foto do criador desse conteúdo" height="300" width="300">
+    <h1 class="center">Sobre a Victória</h1>
+    <div class="container">
+        <div class = "p-30">
+            <p class="center">
+                Sempre fui uma menina muito curiosa e apaixonada pela área de exatas, no ano de 2017 tive a
+                oportunidade de prestar o vestibulinho da Etec, consegui passar e ali comecei minha trajetória no mundo
+                da
+                tecnologia.
+                Em 2019 me formei como técnica em informática e também fiz um curso voltado para meninas no mundo Tech,
+                chamado Minas Programam, onde tive mais certeza de que queria isso pra vida e carreira.
 
-    <h2>Minha música do momento</h2>
+            </p>
+            <p class="center">
+                Atualmente, estou estudando para me tornar uma desenvolvedora Java Full Stack pelo curso da
+                Generation Brasil e lá estou aprendendo desde habilidades técnicas como: linguagem Java, JavaScrpit,
+                SpringBoot, MySql, Metologias ágeis, além de soft skills como trabalho em equipe, proatividade, etc.
+                Acredito muito no poder da tecnologia para transformar de forma positiva a nossas vidas e também na
+                inserção
+                de mais meninas nessa área.
+            </p>
+        </div>
+        <img class="br-50 p-30" src="assets/img/vic.jpg" alt="Foto do criador desse conteúdo" height="300" width="300">
+        <div>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/uj5uvKrDbmQ" title="YouTube video player"
+        </div>
+    </div>
+
+    <h2 class="center">Minha música do momento</h2>
+    <div class="container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/uj5uvKrDbmQ" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
     </iframe>
+    </div>
+
+    <hr>
+    <footer>
+        <div class="container">
+            <a 
+            href="https://www.facebook.com/victoria.v.alves.5/">
+            <img class="tm-social marge" src="assets/img/facebook.png" alt="Logo do Facebook">
+            </a>
+            <a 
+            href="https://www.linkedin.com/in/vict%C3%B3ria-alves-747246191/">
+            <img class="tm-social marge " src="assets/img/linkedin.png" alt="Logo do Linkedin">
+            </a>
+            <a 
+            href="https://www.instagram.com/victoria.alvess/">
+            <img class="tm-social marge" src="assets/img/insta.png" alt="Logo do Instagram">
+            </a>
+        </div>
+
+        <p class="center">
+            Todos os direitos reservados: Victória Alves &copy
+        </p>
+    </footer>
+    
 </body>
 
 </html>
