--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1 class="center">Sobre a Victória</h1>
     <div class="container">
         <div class = "p-30">
-            <p class="center">
+            <p class="justify">
                 Sempre fui uma menina muito curiosa e apaixonada pela área de exatas, no ano de 2017 tive a
                 oportunidade de prestar o vestibulinho da Etec, consegui passar e ali comecei minha trajetória no mundo
                 da
@@ -30,7 +30,7 @@
                 chamado Minas Programam, onde tive mais certeza de que queria isso pra vida e carreira.
 
             </p>
-            <p class="center">
+            <p class="justify">
                 Atualmente, estou estudando para me tornar uma desenvolvedora Java Full Stack pelo curso da
                 Generation Brasil e lá estou aprendendo desde habilidades técnicas como: linguagem Java, JavaScrpit,
                 SpringBoot, MySql, Metologias ágeis, além de soft skills como trabalho em equipe, proatividade, etc.
@@ -39,34 +39,34 @@
                 de mais meninas nessa área.
             </p>
         </div>
-        <img class="br-50 p-30" src="assets/img/vic.jpg" alt="Foto do criador desse conteúdo" height="300" width="300">
         <div>
+        <img class="br-50 p-30" src="assets/img/vic.jpg" alt="Foto do criador desse conteúdo" height="350" width="350">
+        </div>
 
         </div>
-    </div>
 
     <h2 class="center">Minha música do momento</h2>
-    <div class="container">
+    <div class="container mb-50">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/uj5uvKrDbmQ" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
     </iframe>
     </div>
-
+    
     <hr>
     <footer>
         <div class="container">
             <a 
             href="https://www.facebook.com/victoria.v.alves.5/">
-            <img class="tm-social marge" src="assets/img/facebook.png" alt="Logo do Facebook">
+            <img class="tm-social p-30" src="assets/img/facebook.png" alt="Logo do Facebook">
             </a>
             <a 
             href="https://www.linkedin.com/in/vict%C3%B3ria-alves-747246191/">
-            <img class="tm-social marge " src="assets/img/linkedin.png" alt="Logo do Linkedin">
+            <img class="tm-social p-30 " src="assets/img/linkedin.png" alt="Logo do Linkedin">
             </a>
             <a 
             href="https://www.instagram.com/victoria.alvess/">
-            <img class="tm-social marge" src="assets/img/insta.png" alt="Logo do Instagram">
+            <img class="tm-social p-30" src="assets/img/insta.png" alt="Logo do Instagram">
             </a>
         </div>
 
